aksingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: molecule-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-path: "/_admin/status"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: molecule-service
          servicePort: 9090
